news-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news
  template:
    metadata:
      labels:
        app: news
    spec:
      containers:
      - name: news
        image: billela/flasknews:1
        ports:
        - containerPort: 5500
