flask-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-flask-service
spec:
  selector:
    app: mysqlflaskdp
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
