news-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-service
spec:
  selector:
    app: news
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 5500
    targetPort: 5500
