app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: news.info
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: news-service
                port:
                  number: 5500
